# training-code

./: .gitignore  README.md  pyproject.toml  requirements.txt
preparation/: tokenize_data.py
training/: dataset.py  hf_trainer.py  profiling.py
training/monkeypatches/: __init__.py  xformers_gpt.py  xformers_llama.py
