[tool.poetry]
name = "training-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "training_code"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^0.19.0"
parallel-pandas = "^0.5.0"
peft = "^0.3.0"
pyarrow = "^12.0.0"
transformers = "^4.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
